--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'kotlin-android-extensions'
 }
 
-def getApiKey(){
+static def getApiKey(){
     def Properties props = new Properties()
     props.load(new FileInputStream(new File('secrets.properties')))
     return props['MOVIE_DB_API_KEY']
@@ -49,7 +49,7 @@ android {
 dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    def dagger_version = "2.27"
+    def dagger_version = "2.33"
     def coroutine_version = "1.4.3"
     def okhttp_version = "3.12.1"
 
@@ -70,23 +70,29 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 
     implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     def paging_version = "2.1.2"
 
-    implementation "androidx.paging:paging-runtime-ktx:$paging_version" // For Kotlin use paging-runtime-ktx
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
 
-    //implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     def room_version = "2.2.6"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    //mplementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+
+    //testing
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
+
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
 
 }
